--- a/src/Components/Buttons/Buttons.css
+++ b/src/Components/Buttons/Buttons.css
@@ -1,15 +1,12 @@
   
 .search-button {
+  
     color: white;
     background-color: rgb(163, 100, 202);
-    margin: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 5px;
-    width: 100px;
-    font-size: 20px;
+    border-radius: 50px;
+    width: 150px;
+    height: 50px;
+    font-size: 30px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
