--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -1,4 +1,8 @@
-.search-bar {
+
+.search-bar-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
     text-align: center;
     padding-top: 100px;
     padding-bottom: 10px;
@@ -8,7 +12,17 @@
     color: white;
   }
 
-  .search-bar input {
+  .search-bar-area button {
+    color: white;
+    background-color: rgb(163, 100, 202);
+    border-radius: 50px;
+    width: 150px;
+    height: 40px;
+    font-size: 20px;
+    cursor: pointer;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  .search-bar-area input {
     margin: 10px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     height: 35px; 
@@ -20,7 +34,7 @@
     ;
   }
 
-  .search-bar label {
+  .search-bar-area label {
     color: white;
     font-size: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
