--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -1,7 +1,7 @@
 .track-card {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background-color: rgb(52, 0, 84);
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
