--- a/src/Components/ResultsContainer/ResultsContainer.css
+++ b/src/Components/ResultsContainer/ResultsContainer.css
@@ -1,6 +1,7 @@
 
 .results-container {
 display: flex;
-flex-direction: column;
-justify-content: space-around;
+flex-direction: row;
+justify-content: center;
+
 }
