--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -2,15 +2,13 @@
   background-color: rgb(24, 0, 40);
   text-align: center;
   border-radius: 8px;
-  box-shadow: 0 12px 18px    rgb(163, 100, 202);
+  box-shadow: 0 12px 18px    rgb(0, 0, 0);
   padding: 10px;
-    max-width: 600px;
     font-size: 20px;
     margin: 20px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     font-weight: 800;
-    color: white;
-  }
+    color: white;  }
 
   .search-results h2{
     color: white;
