--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -22,11 +22,11 @@ max-width: 600px; /* Width of each card */
   cursor: pointer;
 }
 
-.track-card h2 {
-  font-size: 1.5rem;
+.track-card h1 {
+  font-size: 24px;
   padding-bottom: 4px;
   margin: 8px 0;
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: left;
 }
 
