--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -5,6 +5,7 @@
     border-radius: 8px;
     box-shadow: 0 12px 18px    rgb(0, 0, 0);
     padding: 10px;
+    min-width: 400px;
       font-size: 20px;
       margin: 20px;
       font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
