--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -15,8 +15,14 @@
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
-.track-card:hover {
-  transform: translateY(-5px);
+.icon {
+  font-size: 25px;
+}
+
+.icon:hover {
+  color:rgb(163, 100, 202);
+  font-size: 30px;
+  size: 20px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
   opacity: .5;
   cursor: pointer;
