--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -1,25 +1,49 @@
 .play-list {
+  flex-direction: column; 
+  justify-content: start; 
+  background-color: rgb(24, 0, 40);
+  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0 12px 18px rgb(0, 0, 0);
+  padding: 10px;
+  min-width: 400px;
+  font-size: 20px;
+  margin: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 800;
+  color: white;
+  height: auto; 
+  flex-shrink: 1;
+  overflow: hidden; 
+}
 
-    background-color: rgb(24, 0, 40);
-    text-align: center;
-    border-radius: 8px;
-    box-shadow: 0 12px 18px    rgb(0, 0, 0);
-    padding: 10px;
-    min-width: 400px;
-      font-size: 20px;
-      margin: 20px;
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-      font-weight: 800;
-      color: white;
-    }
-  
-    .play-list h2{
-      color: white;
-      font-size: 40px;
-      padding: 0px;
-      margin: 0px;
-      margin-left: 10px;
-      text-align: left;
-    }
-  
-  
+.play-list-input{
+  background-color: rgb(24, 0, 40);
+  border: none;
+  color: white;
+  font-size: 35px;
+  text-align: left;
+  max-width: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 800;
+  height: auto; 
+  flex-shrink: 1;
+}
+
+.play-list h2 {
+  color: white;
+  font-size: 40px;
+  padding: 0px;
+  margin: 0px;
+  margin-left: 10px;
+  text-align: left;
+}
+
+.play-list h2 {
+  color: white;
+  font-size: 40px;
+  padding: 0px;
+  margin: 0px;
+  margin-left: 10px;
+  text-align: left;
+}
