--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -12,7 +12,7 @@
     color: white;
   }
 
-  .search-bar-area button {
+  /* .search-bar-area button {
     color: white;
     background-color: rgb(163, 100, 202);
     border-radius: 50px;
@@ -21,7 +21,7 @@
     font-size: 20px;
     cursor: pointer;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
+  } */
   .search-bar-area input {
     margin: 10px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
