--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,14 +1,33 @@
 .header {
+    display: flex;
+    justify-content: space-between;
     background-color: rgb(52, 0, 84);
-    text-align: center;
+    align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
     font-size: 80px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     font-weight: 800;
     color: white;
   }
 
+  .login {
+    margin-left: auto;
+    margin-right: 20px;
+  }
+
+  .app-name {
+    flex-grow: 1;
+    text-align: left;
+  }
   .highlight{
     color: rgb(163, 100, 202);
+  }
+  .header h6{
+    font-size: 30px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-weight: 400;
+    color: white;
   }
