--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,12 @@
   color: white;
 
 }
+ h6{
+  font-size: 30px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 400;
+  color: white;
+  margin: 10px;
+}
 
 
